classDiagram
    class Transport {
        <<trait>>
        +start() Result~(), BackendError~
        +stop() Result~(), BackendError~
        +send(client_id: &str, event: &str, data: Value) Result~(), BackendError~
        +broadcast(event: &str, data: Value, target_ids: Option~Vec~String~~~) Result~(), BackendError~
        +disconnect_client(client_id: &str) Result~(), BackendError~
    }

    class TransportHooks {
        +on_connect: Arc~dyn Fn(ClientInfo)~
        +on_message: Arc~dyn Fn(String, String, Value)~
        +on_disconnect: Arc~dyn Fn(String)~
    }

    class WsServer {
        +cfg: ServerConfig
        +sys: SystemSettings
        +clients: Arc~Mutex~HashMap~String, mpsc::Sender~Message~~~
        +running: Arc~AtomicBool~
        +hooks: TransportHooks
        +tls: Option~TlsAcceptor~
        +self_ref: Weak~WsServer~
        +new(cfg, sys, hooks, weak) WsServer
    }

    class SocketIoServer {
        +cfg: ServerConfig
        +sys: SystemSettings
        +hooks: TransportHooks
        +io: Mutex~Option~SocketIo~~
        +clients: Arc~Mutex~HashMap~String, SocketRef~~
        +running: AtomicBool
        +abort: Mutex~Option~AbortHandle~~
        +new(cfg, sys, hooks) SocketIoServer
    }

    class ServiceManager {
        -config: Arc~ConfigManager~
        -logs: Arc~LogManager~
        -clients: Arc~ClientManager~
        -event_bus: EventBus
        -servers: Arc~Mutex~HashMap~String, Arc~dyn Transport~~~
        -runtimes: Arc~Mutex~HashMap~String, ServerRuntime~~
        +start(id: String) Result~(), BackendError~
        +stop(id: &str) Result~(), BackendError~
        +broadcast(server_id, event, data) Result~(), BackendError~
        +send_message(...) Result~(), BackendError~
        +disconnect_client(server_id, client_id) Result~(), BackendError~
    }

    class ServerConfig {
        +id: String
        +ip: String
        +port: u32
        +protocol: ProtocolType
    }

    class ProtocolType {
        <<enum>>
        Websocket
        SocketIo
    }

    class ClientInfo {
        +id: String
        +server_id: String
        +socket_id: String
        +ip_address: String
        +protocol: ProtocolType
        +status: ClientStatus
    }

    class SocketRef

    Transport <|.. WsServer : implements
    Transport <|.. SocketIoServer : implements
    ServiceManager o-- "0..*" Transport : servers (dyn)
    ServiceManager ..> TransportHooks : injects
    WsServer --> TransportHooks : holds
    SocketIoServer --> TransportHooks : holds
    SocketIoServer --> SocketRef : clients map
    WsServer --> ServerConfig : holds
    SocketIoServer --> ServerConfig : holds
    ServiceManager --> ServerConfig : reads cfg
    ServerConfig --> ProtocolType : enum field
    TransportHooks ..> ClientInfo : on_connect arg
